test/negative/indirect_cycle.net
INPUT a
OUTPUT b
VAR a, b, c
IN
c = AND a b
b = AND c a
